--- a/cards.css
+++ b/cards.css
@@ -1,3 +1,7 @@
+@media only screen and (max-width: 600px) {
+  /* Styles for screens smaller than 600px (typically phones) */
+}
+
 *{
   font-family: 'Ubuntu', sans-serif;
 }
