--- a/footer.css
+++ b/footer.css
@@ -1,5 +1,8 @@
- /* CSS FOR FOOTER */
- *{
+/* CSS FOR FOOTER */
+ @media only screen and (max-width: 600px) {
+  /* Styles for screens smaller than 600px (typically phones) */
+} 
+*{
   font-family: 'Ubuntu', sans-serif;
  }
 
