--- a/landpage.css
+++ b/landpage.css
@@ -1,3 +1,7 @@
+@media only screen and (max-width: 600px) {
+  /* Styles for screens smaller than 600px (typically phones) */
+}
+
 *{
     margin:0;
     padding:0;
