--- a/quizstyle.css
+++ b/quizstyle.css
@@ -1,3 +1,7 @@
+@media only screen and (max-width: 600px) {
+  /* Styles for screens smaller than 600px (typically phones) */
+}
+
 /* importing google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
