--- a/webStyle.css
+++ b/webStyle.css
@@ -1,3 +1,4 @@
+@media only screen and (max-width: 600px) { /* Styles for screens smaller than 600px (typically phones) */ }
 * {
   margin: 0;
   padding: 0;
